@startuml
!pragma layout smetana

' Klasse Image3D
class Image3D {
    +getPixel(int x, int y, int z): float
    +showSlice(int z): bool
    +show(): bool
    -slices: std::vector<cv::Mat>
}

' Klasse Channel
class Channel {
    +id: int
    +image: Image3D
}

' Klasse Hyperstack
class Hyperstack {
    +Hyperstack()
    +Hyperstack(const Hyperstack& rhs)
    +~Hyperstack()
    +readFromTifFile(const char* filename): bool
    +readFromTifDir(const std::string& directoryPath): bool
    +saveAsTifFile(const std::string& directoryPath): bool
    +saveAsTifDir(const std::string& directoryPath): bool
    +showSlice(int channel, int z): bool
    +showChannel(int channel): bool
    +printMetadata(): void
    +getPixel(int channel, int x, int y, int z): float
    +convolve(PSF psf): Hyperstack
    -channels: std::vector<Channel>
    -metaData: ImageMetaData
}

' Klasse PSF
class PSF {
    +readFromTifFile(const char* filename): bool
    +readFromTifDir(const std::string& directoryPath): bool
    +saveAsTifFile(const std::string& directoryPath): bool
    +saveAsTifDir(const std::string& directoryPath): bool
    +flip3DPSF(): PSF
    +scalePSF(int new_size_x, int new_size_y, int new_size_z): void
    -image: Image3D
}

' Beziehungen zwischen den Klassen
Hyperstack --> Channel : "channels"
Channel --> Image3D : "image"
PSF --> Image3D : "image"
Hyperstack --> PSF : "convolve(PSF psf)"

@enduml
